--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 body{
     background-image: url('./background.jpg');
 }
+.gifPix{
+
+    border-color:yellow;
+    border-width: 4px;
+    border-style: groove;
+    border-radius: 4px;
+}
